--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,83 @@
 // This is where you can import other stylesheets or write your scss code
 @import "../../node_modules/bootstrap/scss/bootstrap";
+
+$colors: (
+        "body-background": bisque,
+        "nav-background": white,
+        "nav-color": #016690,
+        "main-background": white,
+        "card-background": #e0ddb2,
+        "border": #dad6ab,
+        "footer-background": #016690,
+        "footer-color": white,
+);
+
+$nav-height: 10vh;
+$footer-height: $nav-height;
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: map-get($colors, "body-background");
+}
+
+nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: $nav-height;
+  background-color: map-get($colors, nav-background);
+  color: map-get($colors, "nav-color")
+}
+
+main {
+  //top: $nav-height;
+  flex-grow: 1;
+  width: 100%;
+  background-color: map-get($colors, "main-background");
+  overflow-y: scroll;
+
+}
+
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  //height: 100vh - ($nav-height + $footer-height);
+  background-image: url('../images/header.jpg');
+  background-size: cover;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 90%;
+  padding: 1em;
+  margin: 1em auto;
+  background-color: map-get($colors, "card-background");
+    img {
+      width: 100%;
+    }
+    h4 {
+      margin-top: .5em;
+    }
+}
+
+footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: $footer-height;
+  background-color: map-get($colors, footer-background);
+  color: map-get($colors, "footer-color")
+}
