--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,11 @@
 // This is where you can import other stylesheets or write your scss code
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
+$nav-height: 5vh;
+$footer-height: $nav-height;
+$border: 1px solid $border-color;
+$border-radius: 5px;
+
 $colors: (
         "body-background": bisque,
         "nav-background": white,
@@ -11,9 +16,6 @@ $colors: (
         "footer-background": #016690,
         "footer-color": white,
 );
-
-$nav-height: 10vh;
-$footer-height: $nav-height;
 
 body {
   display: flex;
@@ -31,12 +33,12 @@ nav {
   align-items: center;
   width: 100%;
   height: $nav-height;
+  flex-shrink: 0;
   background-color: map-get($colors, nav-background);
   color: map-get($colors, "nav-color")
 }
 
 main {
-  //top: $nav-height;
   flex-grow: 1;
   width: 100%;
   background-color: map-get($colors, "main-background");
@@ -49,8 +51,7 @@ main {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
-  //height: 100vh - ($nav-height + $footer-height);
+  height: 100vh - ($nav-height + $footer-height);
   background-image: url('../images/header.jpg');
   background-size: cover;
 }
@@ -102,23 +103,9 @@ article {
   }
 }
 
-
-
-footer {
-  position: fixed;
-  bottom: 0;
-  z-index: 1000;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  height: $footer-height;
-  background-color: map-get($colors, footer-background);
-  color: map-get($colors, "footer-color")
-}
-
 footer {
   display: flex;
+  flex-shrink: 0;
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
